--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
       <a href="https://saltyfarmministries.org" class="nav-link">Home</a>
       <a href="https://saltyfarmministries.org/who-we-are" class="nav-link">Who We Are</a>
       <a href="https://saltyfarmministries.org/support-us" class="nav-link">Support Us</a>
-      <a href="https://saltyfarmministries.org/shop" class="nav-link">Shop Us</a>
+      <a href="https://saltyfarmministries.org/shop" class="nav-link">Shop</a>
       <a href="https://saltyfarmministries.org/getinvolved" class="nav-link">Get Involved</a>
-      <a href="https://saltyfarmministries.org/specialevents" class="nav-link">Event Calendar Us</a>
-      <a href="https://saltyfarmministries.org/podcast" class="nav-link">The Salty Talk Podcast Us</a>
+      <a href="https://saltyfarmministries.org/specialevents" class="nav-link">Event Calendar</a>
+      <a href="https://saltyfarmministries.org/podcast" class="nav-link">The Salty Talk Podcast</a>
       <span class="nav-link nav-link-active">Blog</span>
       <a href="https://form-renderer-app.donorperfect.io/give/salty-farm-ministries/donation-form" class="btn-donate">Donate</a>
     </div>
