--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
 
   </style>
 </head>
+
 <body>
 
   <header class="nav">
@@ -634,6 +635,14 @@
   document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 
+  <script>
+    const navToggle = document.getElementById("nav-toggle");
+    const navLinks = document.querySelector(".nav-links");
+
+  navToggle.addEventListener("click", () => {
+    navLinks.classList.toggle("open");
+  });
+  </script>
 
 </body>
 </html>
