--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
     padding: 20px 0;
     transform: translateY(-200%);
     transition: transform 0.35s ease;
+    z-index: 999;
   }
 
   .nav-links.open {
