--- a/approve.html
+++ b/approve.html
@@ -2,25 +2,33 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Submitting approval...</title>
+  <title>Approving…</title>
 </head>
-<body style="font-family:sans-serif; text-align:center; padding-top:60px;">
-  Approving post… hang tight.
+<body style="font-family:Arial; text-align:center; padding:40px;">
+  <h2>Approving blog post…</h2>
+  <p>Please wait a moment.</p>
 
 <script>
+  // Extract ID from URL
   const params = new URLSearchParams(window.location.search);
   const id = params.get("id");
 
-  // payload for Zapier
-  const payload = JSON.stringify({
-    id: id
+  // Send webhook request and then redirect
+  fetch("https://hooks.zapier.com/hooks/catch/19867794/uk51ulv/", {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ id })
+  })
+  .then(() => {
+    window.location.href = "/published";
+  })
+  .catch(() => {
+    window.location.href = "/error";
   });
-
-  // fire and forget webhook call
-  navigator.sendBeacon("https://hooks.zapier.com/hooks/catch/19867794/uk51ulv/", payload);
-
-  // redirect immediately
-  window.location.href = "https://blog.saltyfarmministries.org/published";
 </script>
+
 </body>
 </html>
+
